# Pulsa_Dashboard

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  docker-entrypoint.sh  package-lock.json  railway.toml  start-local.sh  start.sh
backend/: pyproject.toml
backend/app/: database.py  main.py
backend/app/models/: __init__.py  models.py
backend/app/routers/: auth.py  dashboard.py  imports.py  master.py
backend/app/schemas/: schemas.py
backend/app/services/: auth.py  dashboard.py  excel_import.py  file_monitoring.py
docs/: requirement.md
frontend/: next.config.js  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  providers.tsx
frontend/src/app/(dashboard)/: layout.tsx  page.tsx
frontend/src/app/(dashboard)/daily/: page.tsx
frontend/src/app/(dashboard)/drilldown/: page.tsx
frontend/src/app/(dashboard)/exceptions/: page.tsx
frontend/src/app/(dashboard)/import/: page.tsx
frontend/src/app/(dashboard)/master/: page.tsx
frontend/src/app/(dashboard)/monthly/: page.tsx
frontend/src/app/(dashboard)/recon/: page.tsx
frontend/src/app/(dashboard)/trend/: page.tsx
frontend/src/app/(dashboard)/weekly/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/components/ui/: card.tsx  table.tsx
frontend/src/lib/: api.ts
