[project]
name = "pulsa-backend"
version = "0.1.0"
description = "Pulsa Reconciliation Dashboard Backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "pydantic>=2.0.0",
    "pandas>=2.2.0",
    "openpyxl>=3.1.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.9",
    "openai>=1.50.0",
    "httpx>=0.27.0",
    "aiofiles>=24.1.0",
    "bcrypt==4.2.1",
]

[tool.uv]
dev-dependencies = []
